testsuite/tests/parser/should_fail/NoNumericUnderscores0.stderr

NoNumericUnderscores0.hs:11:3: error:
    Use NumericUnderscores to allow underscores in integer literals
